# gtest-mpi-listener

./: .clang-format  .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  Makefile  README.md  meson.build  meson_options.txt  vendor-googletest.cmake.in
include/: gtest-mpi-listener.hpp
include/internal/: cstring_util.hpp  posix.hpp  pretty_print.hpp  test_result_comm.hpp
src/: example.cpp  example2.cpp  example_minimal.cpp  example_pretty.cpp
test/: mpi-minimal-listener-unit-tests.cpp  mpi-wrapper-listener-unit-tests.cpp  unit-tests.cpp
